[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gsheeter"
authors = [{ name = "Yunjong Guk", email = "haydenkuk@gmail.com" }]
maintainers = []
readme = "README.md"
keywords = ["spreadsheets", "google-spreadsheets", "google-sheets"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["google-auth>=1.12.0", "google-auth-oauthlib>=0.4.1"]
requires-python = ">=3.12"
dynamic = ["version", "description"]

[project.urls]
Documentation = ""
Source = "https://github.com/haydenkuk/gsheeter"
Issues = "https://github.com/haydenkuk/gsheeter/issues"

[project.license]
file = "LICENSE.txt"

[tool.flit.sdist]
include = ["docs/", "HISTORY.rst"]

[tool.setuptools.package-data]
gsheeter = ["gsheeter/py.typed"]